style.css
body{
    background-color: gray;
}

h1{
    font-family: 'Ubuntu', sans-serif;
    text-align: center;
    text-shadow: 0 0 2rem #000000;;
    margin-bottom: 0px;
}
h4{
    text-align: center;
    margin-top: 0px;
    margin-bottom: 70px;
}

p{
    font-family: 'Ubuntu', sans-serif;
    text-align: center;
    font-size: larger;
    margin-top: 30px; 
}

h2{
    font-family: 'Ubuntu', sans-serif;
    text-align: center;
    font-size: larger;
}

.contenedor {
    display: flex;
    justify-content: center;
    gap: 8rem; 
    margin-bottom: 70px;
}

.caja{
    border: 3px solid black;
    width: 100px;
    height: 100px;
    border-radius: 5px;
    transition: all .1s;
}

#piedra{
    background-image: url(img/piedra.png);
}

#papel{
    background-image: url(img/papel.png);
}

#tijera{
    background-image: url(img/tijera.png);
}

.transform{
    transform: scale(1.1);
    box-shadow: 0 0 1rem #000000;
}

